style_board2.css
/*TODO: Consolidate these better (multi classes for single divs...bigblock class not implemented yet)*/

/*These from previous css file, possibly ignored*/
body {
    background-color: #f4f4f4;
    color: #555555;
    font: normal 16px Arial, Helvetica, sans-serif;
    line-height: 1.6em;
    margin: 0;
}
.sidepanel form{
}
.sidepanel input[type=number] {
    width: 20%;
    margin-bottom: 5px;
}






#game_board{
    float:right;
    width:1067px;
    height:680px;
    margin:5px;
    border:3px solid black;
    background-image: url("resources/Image files/big_map4.png");
    background-size:contain;
    background-repeat: no-repeat;
    z-index: 10;
}

.grid{
    margin: 1px;
}

.gridblockLeftBig{
    z-index: 15;
    position: relative;
    width: 210px;
    height: 212px;
    margin-bottom: 2px;
    margin-right: 2px;
    float: left;
}

.gridblockLeftBig:hover{
    /*background-color: rgba(236, 1, 255, 0.16)*/
}

.gridblockRightBig{
    z-index: 15;
    position: relative;
    width: 240px;
    height: 505px;
    margin-top: 2px;
    margin-right: 3px;
    float: right;
}

/*TODO: implement slight hover highlight?*/
.gridblockRightBig:hover{
    /*background-color: rgba(236, 1, 255, 0.16)*/
}

.gridblock{
    z-index: 15;
    position: relative;
    width: 82px;
    height: 67px;
    margin: 3px 3px 2.5px 2px;
    float: left;
}

.gridblock:hover{
    background-color: rgba(236, 1, 255, 0.15)
}

.gridblockEmptyLeft{
    z-index: 15;
    position: relative;
    width: 35px;
    height: 352px;
    margin: 2px 2px 5px;
    float: left;
}

.bigblock3x3{
    width: 250px;
    height: 205px;
    position: absolute;
    background-repeat: no-repeat;
    background-size: 240px 195px;
    background-color: #a30004;
    background-position: center;
    z-index: 20;
}

#bigblock1{
    visibility: visible;
    background-image: url("resources/Image files/special_island1.png");
    margin: 4px 3px 2.5px 130px;
}
#bigblock2{
    visibility: hidden;
    background-image: url("resources/Image files/special_island2.png");
    margin: 4px 3px 2.5px 390px;
}
#bigblock3{
    visibility: hidden;
    background-image: url("resources/Image files/special_island3.png");
    margin: 4px 3px 2.5px 565px;
}
#bigblock4{
    visibility: hidden;
    background-image: url("resources/Image files/special_island4.png");
    margin: 77px 3px 2.5px 390px;
}
#bigblock5{
    visibility: hidden;
    background-image: url("resources/Image files/special_island5.png");
    margin: 187px 3px 2.5px 217px;
}
#bigblock6{
    visibility: hidden;
    background-image: url("resources/Image files/special_island6.png");
    margin: 150px 3px 2.5px 565px;
}
#bigblock7{
    visibility: hidden;
    background-image: url("resources/Image files/special_island7.png");
    margin: 223px 3px 2.5px 43px;
}
#bigblock8{
    visibility: hidden;
    background-image: url("resources/Image files/special_island8.png");
    margin: 223px 3px 2.5px 390px;
}
#bigblock9{
    visibility: hidden;
    background-image: url("resources/Image files/special_island9.png");
    margin: 295px 3px 2.5px 304px;
}
#bigblock10{
    visibility: hidden;
    background-image: url("resources/Image files/special_island10.png");
    margin: 295px 3px 2.5px 565px;
}
#bigblock11{
    visibility: hidden;
    background-image: url("resources/Image files/special_island11.png");
    margin: 365px 3px 2.5px 130px;
}
#bigblock12{
    visibility: hidden;
    background-image: url("resources/Image files/special_island12.png");
    margin: 365px 3px 2.5px 390px;
}

.game_piece{
    width: 45%;
    height: 45%;
    visibility: visible;
    z-index: 25;
    float: left;
    position: relative;
}

.test_piece{background-image: url("resources/Image files/test_piece.png");}
.transport_piece{}
.aircraftcarrier_piece{}
.destroyer_piece{}
.submarine_piece{}
.soldier_piece{}

.gridblockTiny{
    margin-right: 1px;
    margin-bottom: 1px;
    position: absolute;
    background-color: rgba(255, 15, 0, 0.45);
    z-index: 16;
}

/*TODO: this different color so it stands out?    how does hovering work with pieces on the mouse dragging???*/
.gridblockTiny:hover{
    background-color: rgba(255, 15, 0, 0.31);
}

#pos13a{
    width: 50px;
    height: 50px;
    margin-left: 10px;
    margin-top: 95px;
}
#pos13b{
    width: 45px;
    height: 45px;
    margin-left: 100px;
    margin-top: 10px;
}
#pos13c{
    width: 22%;
    height: 22%;
    margin-left: 28%;
    margin-top: 68%;
    -ms-transform: rotate(-20deg); /* IE 9 */
    -webkit-transform: rotate(-20deg); /* Safari */
    transform: rotate(-20deg);
}
#pos13d{
    width: 45px;
    height: 45px;
    margin-left: 35px;
    margin-top: 28px;
    -ms-transform: rotate(-36deg); /* IE 9 */
    -webkit-transform: rotate(-36deg); /* Safari */
    transform: rotate(-36deg);
}
#pos13e{}
#pos13f{}
#pos13g{}
#pos13h{}
#pos13i{}
#pos13j{}

#pos14a{}
#pos14b{}
#pos14c{}
#pos14d{}
#pos14e{}
#pos14f{}
#pos14g{}
#pos14h{}
#pos14i{}
#pos14j{}

#pos1a{
    width: 50px;
    height: 50px;
    margin-left: 85px;
    margin-top: 45px;
}
#pos1b{
    width: 45px;
    height: 45px;
    margin-left: 110px;
    margin-top: 98px;
}
#pos1c{
    width: 45px;
    height: 45px;
    margin-left: 35px;
    margin-top: 28px;
}
#pos1d{
    width: 45px;
    height: 45px;
    margin-left: 35px;
    margin-top: 28px;
}

#pos2a{}
#pos2b{}
#pos2c{}
#pos2d{}

#pos3a{}
#pos3b{}
#pos3c{}

#pos4a{}
#pos4b{}
#pos4c{}
#pos4d{}

#pos5a{}
#pos5b{}
#pos5c{}
#pos5d{}

#pos6a{}
#pos6b{}
#pos6c{}

#pos7a{}
#pos7b{}
#pos7c{}

#pos8a{}
#pos8b{}
#pos8c{}

#pos9a{}
#pos9b{}
#pos9c{}
#pos9d{}

#pos10a{}
#pos10b{}
#pos10c{}
#pos10d{}

#pos11a{}
#pos11b{}
#pos11c{}

#pos12a{}
#pos12b{}
#pos12c{}
#pos12d{}

